# ChangeLog for net-dns/bind
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.130 2006/12/17 17:56:30 voxus Exp $

*bind-9.3.3 (17 Dec 2006)
*bind-9.2.7 (17 Dec 2006)

  17 Dec 2006; Konstantin V. Arkhipov <voxus@gentoo.org>
  +files/localhost.zone-r2, +bind-9.2.7.ebuild, +bind-9.3.3.ebuild:
  Version bumps, wrt security bugs #158217 and #131337. Also closing #153601 and
  #151839. Support for net-dns/resolvconf-gentoo added.

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> bind-9.2.6.ebuild,
  bind-9.2.6-r3.ebuild, bind-9.2.6-r4.ebuild, bind-9.2.6-r5.ebuild,
  bind-9.3.2.ebuild, bind-9.3.2-r3.ebuild, bind-9.3.2-r4.ebuild,
  bind-9.3.2-r5.ebuild:
  dev-db/mysql => virtual/mysql

*bind-9.3.2-r5 (22 Oct 2006)
*bind-9.2.6-r5 (22 Oct 2006)

  22 Oct 2006; Konstantin V. Arkhipov <voxus@gentoo.org>
  +bind-9.2.6-r5.ebuild, +bind-9.3.2-r5.ebuild:
  Closing bugs #130649 and #151839.

  22 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  bind-9.3.2-r4.ebuild:
  Add ~x86-fbsd keyword.

  19 Sep 2006; Konstantin Arkhipov <voxus@gentoo.org> bind-9.2.6-r4.ebuild,
  bind-9.3.2-r4.ebuild:
  Closing bug #148178.

  14 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> bind-9.2.6-r4.ebuild,
  bind-9.3.2-r4.ebuild:
  Stable on hppa wrt security #146486

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org> bind-9.3.2-r4.ebuild:
  Mark 9.3.2-r4 stable on ia64. #146486

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org> bind-9.2.6.ebuild,
  bind-9.2.6-r3.ebuild, bind-9.2.6-r4.ebuild, bind-9.3.2.ebuild,
  bind-9.3.2-r3.ebuild, bind-9.3.2-r4.ebuild:
  Use -j1 unconditionally since the Makefiles aren't parallel safe. Checking
  for distcc in FEATURES is bogus.

  12 Sep 2006; Tony Vroon <chainsaw@gentoo.org> bind-9.2.6-r4.ebuild,
  bind-9.3.2-r4.ebuild:
  Stable on X86 wrt security bug #146486.

  12 Sep 2006; Thomas Cort <tcort@gentoo.org> bind-9.2.6-r4.ebuild,
  bind-9.3.2-r4.ebuild: