@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/bind
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.130 2006/12/17 17:56:30 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.131 2006/12/18 08:31:14 opfer Exp $
+
+  18 Dec 2006; Christian Faulhammer <opfer@gentoo.org> bind-9.2.7.ebuild,
+  bind-9.3.3.ebuild:
+  stable x86, security bug #158217
 
 *bind-9.3.3 (17 Dec 2006)
 *bind-9.2.7 (17 Dec 2006)
